--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,12 @@
 /* 1) Importar librerías de terceros */
 /* ———————— Angular Material Theme ———————— */
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
 
 /* ———————— Bootstrap 5 ———————— */
-@import '~bootstrap/dist/css/bootstrap.min.css';
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 /* ———————— FontAwesome ———————— */
-@import '~@fortawesome/fontawesome-free/css/all.min.css';
+@import '@fortawesome/fontawesome-free/css/all.min.css';
 
 
 
